<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_Hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/GeneralMargin"
        android:background="@color/colorAccent"
        android:ellipsize="end"
        android:gravity="center"
        android:padding="@dimen/GeneralPadding"
        android:text="@string/this_is_my_first_textview"
        android:textSize="12sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:scaleType="fitCenter"
        android:src="@drawable/android" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:onClick="btnHelloOnClick"
        android:padding="@dimen/GeneralMargin"
        android:text="@string/apasa_l"
        android:textColor="@android:color/holo_blue_bright" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_margin="@dimen/GeneralMargin"
        android:background="@color/colorAccent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_email_address"
        android:inputType="textEmailAddress" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/i_accept_to_learn_android" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="no" />
    </RadioGroup>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/notifications" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="70" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="@string/this_is_a_search_view" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/GeneralMargin"
        android:visibility="visible" />


</LinearLayout>